# opendashcam

android/: .gitignore  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/liej6799/opendashcam/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni.cpp
android/app/src/main/cpp/Common/: Utils.h
android/app/src/main/cpp/Common/Input/: NdkCamera.cpp
android/app/src/main/cpp/Ncnn/Common/: Common.h
android/app/src/main/cpp/Ncnn/Model/: NanoDet.cpp  NanoDet.h
android/app/src/main/java/com/liej6799/opendashcam/: BaseApplication.java
android/app/src/main/java/com/liej6799/opendashcam/di/: ActivityBuilderModule.java  AppComponent.java  AppModule.java  ViewModelFactoryModule.java  ViewModelKey.java  ViewModelProviderFactory.java
android/app/src/main/java/com/liej6799/opendashcam/di/sharedpref/: CustomSharedPreferences.java  SharedPreferencesModule.java
android/app/src/main/java/com/liej6799/opendashcam/ui/: LandscapeDaggerAppCompatActivity.java  MainActivity.java
android/app/src/main/java/com/liej6799/opendashcam/ui/camera/: CameraBackgroundActivity.java
android/app/src/main/java/com/liej6799/opendashcam/util/: ImageHelper.java  NativeCall.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/liej6799/opendashcam/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
